--- a/02_05/02_05-before.ipynb
+++ b/02_05/02_05-before.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "635f8aec-5737-4c2c-8cfa-afc25a0f13e7",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,16 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 2s/step\n",
-      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 485ms/step\n"
+      "\u001b[1m1/1\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 485ms/step\n",
+      "FID score: 68.25406071426886\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_15905/1288990552.py:26: LinAlgWarning: Matrix is singular. The result might be inaccurate or the array might not have a square root.\n",
+      "  covmean = sqrtm(sigma1.dot(sigma2))\n"
      ]
     }
    ],
